# esercizi_lsn

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  conanfile.txt  environment.yml  requirements.txt
data/md_settings/: input.gas  test.config
data/seeds/: results.out
libs/: CMakeLists.txt
libs/ariel_random/: CMakeLists.txt
libs/ariel_random/ariel_random/: ariel_random.hpp
results/: 01_1.csv  01_1_chi.csv  01_1_stats.csv
results/04/gas/run/: config.positions  config.velocities
results/04/gas/warmup/: config.positions  config.velocities
results/04/liquid/run/: config.positions  config.velocities
results/04/liquid/warmup/: config.positions  config.velocities
results/04/solid/run/: config.positions  config.velocities
results/04/solid/warmup/: config.positions  config.velocities  rng.seed
results/07/2/gas/run/: input  positions  rng.seed
results/07/2/gas/warmup/1/: positions  rng.seed
results/07/2/gas/warmup/2/: input  positions  rng.seed
results/07/2/liquid/run/: input  positions  rng.seed
results/07/2/liquid/warmup/1/: positions  rng.seed
results/07/2/liquid/warmup/2/: positions  rng.seed
results/07/2/solid/run/: positions  rng.seed
results/07/2/solid/warmup/1/: input  positions  rng.seed
results/07/2/solid/warmup/2/: positions  rng.seed
results/07/4/gas/run/mc/: positions  rng.seed
results/07/4/gas/run/md/: positions  velocities
results/07/4/gas/warmup/mc/: positions  rng.seed
results/07/4/gas/warmup/md/: input  positions  velocities
results/07/4/liquid/run/mc/: input  positions  rng.seed
results/07/4/liquid/run/md/: positions  velocities
results/07/4/liquid/warmup/mc/: input  positions  rng.seed
results/07/4/liquid/warmup/md/: positions  velocities
results/07/4/solid/run/mc/: input  positions  rng.seed
results/07/4/solid/run/md/: positions  velocities
results/07/4/solid/warmup/mc/: input  positions  rng.seed
results/07/4/solid/warmup/md/: input  positions  velocities
results/08/1/: annealing.csv
results/08/2/: annealing.csv
results/08/3/: H_min.csv  psi.csv
results/10/: capitals.csv
solutions/: Exercise01.ipynb  Exercise02.ipynb  Exercise03.ipynb  Exercise04.ipynb  Exercise05.ipynb  Exercise06.ipynb  Exercise07.ipynb  Exercise08.ipynb  Exercise09.ipynb  Exercise10.ipynb  Exercise11.1.ipynb  Exercise11.2.ipynb  Exercise11.3.ipynb  Exercise12.1.ipynb  Exercise12.2.ipynb  Exercise12.3.ipynb  global_utils.py
solutions/argon/run/: input.gas  input.liquid  input.solid
solutions/argon/warmup/: input.gas  input.liquid  input.solid
solutions/ex06/: data.py  plot.py  run.py  vars.py
solutions/ex07/: compute.py  data.py  paths.py  plot.py
solutions/ex07/2/gas/: input
solutions/ex07/2/liquid/: input
solutions/ex07/2/liquid/warmup/: input
solutions/ex07/2/solid/: input
solutions/ex07/2/solid/run/: input
solutions/ex07/4/gas/run/mc/: input
solutions/ex07/4/gas/run/md/: input
solutions/ex07/test/mc_gas/: input
solutions/ex07/test/mc_solid/: input
solutions/ex07/test/md_gas/: input
solutions/ex08/: compute.py  data.py  paths.py  plot.py
solutions/ex09/: compute.py  data.py  paths.py  plot.py
solutions/ex10/: compute.py  data.py  paths.py  plot.py
solutions/ex11/: data.py  hparams.py  model_builders.py  plot.py  utils.py
solutions/ex12/: models.py  utils.py
src/: CMakeLists.txt
src/Exercise01/: 1.1.cpp  1.3.cpp  1.cpp  2.cpp  3.cpp  CMakeLists.txt  LSN_Exercises_01.ipynb  display.ipynb
src/Exercise01/simulations/: simulation_01_1.csv  simulation_01_1_3.csv
src/Exercise02/: 1.cpp  2.cpp  CMakeLists.txt  LSN_Exercises_02.ipynb
src/Exercise03/: 1.cpp  CMakeLists.txt  LSN_Exercises_03.ipynb
src/Exercise04/: 1.cpp  2.cpp  CMakeLists.txt  LSN_Exercises_04.ipynb  display.ipynb
src/Exercise05/: 1.cpp  CMakeLists.txt  LSN_Exercises_05.ipynb  structs.hpp
src/Exercise06/: CMakeLists.txt  LSN_Exercises_06.ipynb  correlation.cpp  equilibrate.cpp  measure.cpp  structs.hpp
src/Exercise07/: 2.cpp  4.cpp  CMakeLists.txt  LSN_Exercises_07.ipynb  options.hpp
src/Exercise08/: 1.cpp  2.cpp  2_psi.cpp  CMakeLists.txt  LSN_Exercises_08.ipynb  options.hpp
src/Exercise09/: 1.cpp  CMakeLists.txt  LSN_Exercises_09.ipynb  options.hpp
src/Exercise10/: 2.cpp  CMakeLists.txt  LSN_Exercises_10.ipynb  options.hpp
src/Exercise11/: LSN_Exercises_11.ipynb
src/Exercise12/: LSN_Exercises_12.ipynb
src/include/: config.hpp.in
src/lib/: CMakeLists.txt  utils.hpp
src/lib/ariel_mdmc/: CMakeLists.txt
src/lib/ariel_mdmc/ariel_mdmc/: MD_MC.cpp  MD_MC.h  Makefile  random.old.cpp  random.old.h
src/lib/ariel_random/: CMakeLists.txt
src/lib/ariel_random/ariel_random/: ariel_random.cpp  ariel_random.hpp
src/lib/distributions/: cauchy_lorentz.hpp  discrete.hpp  exercises.hpp  exponential.hpp  goniom.hpp  pdf.hpp  uniform_angle.hpp  uniform_int.hpp
src/lib/estimators/: chi2.hpp  estimators.hpp  mean.hpp  variance.hpp
src/lib/genetic/: CMakeLists.txt  genetic_process.hpp  genetic_utils.hpp
src/lib/genetic/genetic_tsp/: crossovers.hpp  tsp_ga.hpp
src/lib/mc_integrators/: integrator.hpp
src/lib/md_integrator/: md_integrator.hpp  structures.hpp
src/lib/models/ising/: CMakeLists.txt  ising.hpp  simulation.hpp  structs.hpp
src/lib/models/ising/1D/: ising.hpp  simulation.hpp  structs.hpp  variables.hpp
src/lib/molecular_systems/: algos.hpp  system.hpp
src/lib/molecular_systems/data_types/: measures.hpp  settings.hpp  vectors.hpp
src/lib/molecular_systems/steppers/: collectors.hpp  mc.hpp  md.hpp
src/lib/samplers/MCMC/: gibbs.hpp  metropolis.hpp
src/lib/transitions/: gauss.hpp  transition.hpp  uniform.hpp
src/lib/variational_mc/: simulated_annealing.hpp
src/lib/walkers/: walker.hpp
tests/: AlgoTests.cpp  CMakeLists.txt  EstimatorsTest.cpp  Ex08Tests.cpp  GeneticTests.cpp  IntegratorTests.cpp  IsingTests.cpp  MDTests.cpp  MetaTests.cpp  RngTests.cpp  TestEstimators.cpp  TransitionsTests.cpp  UtilsTests.cpp  VectorsTests.cpp  unif_double.out
tests/ex08/: integrand_1_1.csv  integrand_2_1.5.csv  trial_1_1.csv  trial_2_0.csv  trial_2_1.5.csv
(+4 files in other folders)
